--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
@@ -3,12 +3,54 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Mass Upload BOM
+appTitle=BOM一括登録
 
 #YDES: Application description
-appDescription=Mass Upload BOM
+appDescription=BOM一括登録
 #XTIT: Main view title
-title=Mass Upload BOM
+title=BOM一括登録
 
 #XFLD,45
-flpTitle=Mass Upload BOM
+flpTitle=BOM一括登録
+
+#Texts for Main.view.xml
+templateText=テンプレートダウンロード
+uploadText=ファイルアップロード
+result=結果
+clearBtn=取込データクリア
+checkBtn=チェック
+excuteBtn=実行
+exportBtn=エクセル出力
+logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
+
+#Table Column
+Status=ステータス
+Message=メッセージ
+Material=品目
+Plant=プラント
+BillOfMaterialVariantUsage=BOM用途
+IsMultipleBOMAlt=代替BOM
+HeaderValidityStartDate=有効開始日
+BOMHeaderQuantityInBaseUnit=基本数量
+BOMHeaderText=BOMテキスト
+BOMAlternativeText=代替テキスト
+BillOfMaterialStatus=BOMステータス
+BillOfMaterialItemNumber=明細番号
+BillOfMaterialItemCategory=明細カテゴリ
+BillOfMaterialComponent=構成品目
+BillOfMaterialItemQuantity=構成数量
+BillOfMaterialItemUnit=単位
+BOMItemSorter=ソート列
+ComponentScrapInPercent=構成品不良率
+AlternativeItemGroup=代替明細グループ
+AlternativeItemPriority=優先順位
+AlternativeItemStrategy=方針
+UsageProbabilityPercent=使用頻度
+BOMItemDescription=明細テキスト行1
+BOMItemText2=明細テキスト行2
+ProdOrderIssueLocation=保管場所
+BOMItemIsCostingRelevant=原価計算関連フラグ
+BOMSubItemInstallationPoint=副明細設定ポイント
+BillOfMaterialSubItemQuantity=副明細数量
+
+
