--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
@@ -12,3 +12,43 @@ title=Mass Upload BOM
 
 #XFLD,45
 flpTitle=Mass Upload BOM
+
+#Texts for Main.view.xml
+templateText=Download Template
+uploadText=Upload File
+result=Result
+clearBtn=Clear
+checkBtn=Check
+excuteBtn=Excute
+exportBtn=Excel Output
+logInfo={0} pieces of data, {1} were successfully imported, and {2} failed to be imported.
+
+#Table Column
+Status=Status
+Message=Message
+Material=Material
+Plant=Plant
+BillOfMaterialVariantUsage=BOM Usage
+IsMultipleBOMAlt=Is Alternative BOM
+HeaderValidityStartDate=Valid-From Date
+BOMHeaderQuantityInBaseUnit=Base Quantity
+BOMHeaderText=BOM Header Text
+BOMAlternativeText=BOM Alternative Text
+BillOfMaterialStatus=BOM Status
+BillOfMaterialItemNumber=BOM Item No.
+BillOfMaterialItemCategory=Item Category
+BillOfMaterialComponent=Component
+BillOfMaterialItemQuantity=Component Quantity
+BillOfMaterialItemUnit=Component Unit
+BOMItemSorter=Sort String
+ComponentScrapInPercent=Scrap in Percent
+AlternativeItemGroup=Alternative Item Group
+AlternativeItemPriority=Priority
+AlternativeItemStrategy=Strategy
+UsageProbabilityPercent=Usage Percent
+BOMItemDescription=BOM Item Text(Line 1)
+BOMItemText2=BOM Item Text(Line 2)
+ProdOrderIssueLocation=Location
+BOMItemIsCostingRelevant=Is Costing Relevant
+BOMSubItemInstallationPoint=Sub-item Installation Point
+BillOfMaterialSubItemQuantity=Sub-item Quantity
