PP-013 OF分割ルールマスタ管理

--- a/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
@@ -33,3 +33,6 @@ Plant=Plant
 ShipUnit=Ship Unit
 SplitUnit=Split Unit
 DeleteFlag=Delete Flag
+
+#Message
+ProcessingCompleted=Processing Completed.
