--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -3,15 +3,17 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=MR申請/副資材廃棄管理
+appTitle=Manage Material Requisition
 
 #YDES: Application description
-appDescription=MR申請/副資材廃棄管理
+appDescription=Manage Material Requisition
 
 #XFLD,36
-flpTitle=MR申請/副資材廃棄管理
+flpTitle=Manage Material Requisition
 
+operation=Create/Update
 create=Create
+update=Update
 print=Print
 approve=Approve
 approveCancel=Approve Cancel
@@ -19,7 +21,8 @@ posting=Posting
 postingCancel=Posting Cancel
 
 # Dialog
-RegistrationScreen=Registration Screen
+operationScreen=Create/Update Screen
+searchBtn=Search
 saveBtn=Save
 addBtn=Add Line
 delBtn=Delete Line
@@ -38,7 +41,7 @@ Receiver=Receiver
 Customer=Customer
 CustomerName=Customer Name
 ManufacturingOrder=Manufacturing Order
-Product=Product
+ManufOrderProduct=Product
 LineWarehouseStatus=Line Warehouse Status
 
 #Create Item
@@ -56,6 +59,8 @@ Currency=Currency
 OrderIsClosed=Order Status
 
 #Value Help
+CreatedDate=Created Date
+CreatedByUserName=Created By
 ControllingArea=Controlling Area
 ValidityEndDate=Valid To
 ValidityStartDate=Valid From
@@ -64,3 +69,11 @@ ManufacturingOrderType=Order Type
 MfgOrderPlannedStartDate=Planned Start Date
 MfgOrderPlannedEndDate=Planned End Date
 MRPController=MRP Controller
+Product=Product
+ProductDescription=Product Description
+ProductType=Product Type
+StandardPrice=Standard Price
+PriceUnitQty=Price Unit
+
+#Text
+selectOperation=Please select a function operation.
