--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -11,7 +11,9 @@ appDescription=MR申請/副資材廃棄管理
 #XFLD,36
 flpTitle=MR申請/副資材廃棄管理
 
+operation=登録/編集
 create=登録
+update=更新
 print=発行
 approve=承認
 approveCancel=承認取消
@@ -19,7 +21,8 @@ posting=転記
 postingCancel=転記取消
 
 # Dialog
-RegistrationScreen=登録画面
+operationScreen=登録/編集画面
+searchBtn=検索
 saveBtn=保存
 addBtn=明細追加
 delBtn=明細削除
@@ -38,7 +41,7 @@ Receiver=宛先
 Customer=得意先
 CustomerName=得意先名
 ManufacturingOrder=製造指図
-Product=指図品目番号
+ManufOrderProduct=指図品目番号
 LineWarehouseStatus=現場在庫利用
 
 #Create Item
@@ -52,10 +55,12 @@ StorageLocationName=保管場所名
 Remark=補足情報/発生理由
 StandardPrice=単価
 TotalAmount=合計金額
-Currency=金額単位
+Currency=通貨
 OrderIsClosed=製造指図状態
 
 #Value Help
+CreatedDate=申請日付
+CreatedByUserName=登録者
 ControllingArea=管理領域
 ValidityEndDate=有効終了
 ValidityStartDate=有効開始
@@ -64,3 +69,11 @@ ManufacturingOrderType=指図タイプ
 MfgOrderPlannedStartDate=計画開始日付
 MfgOrderPlannedEndDate=計画終了日
 MRPController=MRP 管理者
+Product=製品
+ProductDescription=製品テキスト
+ProductType=製品タイプ
+StandardPrice=標準原価
+PriceUnitQty=価格単位
+
+#Text
+selectOperation=機能操作を選択してください。
