--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -11,22 +11,24 @@ appDescription=MR申請/副資材廃棄管理
 #XFLD,36
 flpTitle=MR申請/副資材廃棄管理
 
-operation=登録/編集
-create=登録
-update=更新
-print=発行
-approve=承認
-approveCancel=承認取消
-posting=転記
-postingCancel=転記取消
+Operation=登録/編集
+Create=登録
+Update=更新
+Delete=削除
+Resent=再送信
+Print=発行
+Approval=承認
+CancelApproval=承認取消
+Posting=転記
+CancelPosting=転記取消
 
 # Dialog
-operationScreen=登録/編集画面
-searchBtn=検索
-saveBtn=保存
-addBtn=明細追加
-delBtn=明細削除
-closeBtn=いいえ
+OperationScreen=登録/編集画面
+SearchBtn=検索
+SaveBtn=保存
+AddBtn=明細追加
+DelBtn=明細削除
+CloseBtn=いいえ
 Results=結果
 
 #Create Header
@@ -52,6 +54,7 @@ Quantity=数量
 BaseUnit=単位
 StorageLocation=消費保管場所
 StorageLocationName=保管場所名
+Location=ロケーション
 Remark=補足情報/発生理由
 StandardPrice=単価
 TotalAmount=合計金額
@@ -77,3 +80,4 @@ PriceUnitQty=価格単位
 
 #Text
 selectOperation=機能操作を選択してください。
+confirmMessage={0}しますか？
