--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -11,22 +11,24 @@ appDescription=Manage Material Requisition
 #XFLD,36
 flpTitle=Manage Material Requisition
 
-operation=Create/Update
-create=Create
-update=Update
-print=Print
-approve=Approve
-approveCancel=Approve Cancel
-posting=Posting
-postingCancel=Posting Cancel
+Operation=Create/Update
+Create=Create
+Update=Update
+Delete=Delete
+Resent=Resent
+Print=Print
+Approval=Approval
+CancelApproval=Cancel Approval
+Posting=Posting
+CancelPosting=Cancel Posting
 
 # Dialog
-operationScreen=Create/Update Screen
-searchBtn=Search
-saveBtn=Save
-addBtn=Add Line
-delBtn=Delete Line
-closeBtn=Close
+OperationScreen=Create/Update Screen
+SearchBtn=Search
+SaveBtn=Save
+AddBtn=Add Line
+DelBtn=Delete Line
+CloseBtn=Close
 Results=Results
 
 #Create Header
@@ -52,6 +54,7 @@ Quantity=Quantity
 BaseUnit=Unit
 StorageLocation=Storage Location
 StorageLocationName=Storage Loc. Name
+Location=Location
 Remark=Remark
 StandardPrice=Standard Price
 TotalAmount=Total Amount
@@ -77,3 +80,4 @@ PriceUnitQty=Price Unit
 
 #Text
 selectOperation=Please select a function operation.
+confirmMessage=Would you like to {0}?
