PP-006 製造バージョン一括登録

--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n.properties
@@ -40,3 +40,6 @@ BillOfMaterialVariant=代替BOM
 ProductionLine=生産ライン
 IssuingStorageLocation=出庫保管場所
 ReceivingStorageLocation=入庫保管場所
+
+#Message
+ProcessingCompleted=処理が完了しました。
