--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
@@ -40,3 +40,6 @@ BillOfMaterialVariant=Alternative BOM
 ProductionLine=Production Line
 IssuingStorageLocation=Issue Stor. Location
 ReceivingStorageLocation=Receiving Location
+
+#Message
+ProcessingCompleted=Processing Completed.
