--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
@@ -30,11 +30,12 @@ Product=Product
 Plant=Plant
 ValidityStartDate=Validity Start Date
 BillOfOperationsDesc=Description
+ProductionRouting=Group Counter
 BillOfOperationsUsage=Usage
 BillOfOperationsStatus=Overall Status
 ResponsiblePlannerGroup=Planner Group
 Operation=Operation
-WorkCenterInternalID=Work Center
+WorkCenter=Work Center
 OperationControlProfile=Control Key
 OperationStandardTextCode=Standard Text Key
 StandardWorkQuantity1=Standard Value1
@@ -50,3 +51,6 @@ StandardWorkQuantityUnit5=Unit5
 StandardWorkQuantity6=Standard Value6
 StandardWorkQuantityUnit6=Unit6
 NumberOfTimeTickets=No. of Time Tickets
+
+#Message
+ProcessingCompleted=Processing Completed.
