--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
@@ -30,11 +30,12 @@ Product=品目
 Plant=プラント
 ValidityStartDate=有効開始日付
 BillOfOperationsDesc=作業手順テキスト
+ProductionRouting=グループカウンタ
 BillOfOperationsUsage=用途
 BillOfOperationsStatus=全体ステータス
 ResponsiblePlannerGroup=計画グループ
 Operation=作業番号
-WorkCenterInternalID=作業区
+WorkCenter=作業区
 OperationControlProfile=管理キー
 OperationStandardTextCode=作業テキスト
 StandardWorkQuantity1=パラメータ1：段取
@@ -50,3 +51,6 @@ StandardWorkQuantityUnit5=単位5
 StandardWorkQuantity6=パラメータ6：その他製造費用
 StandardWorkQuantityUnit6=単位6
 NumberOfTimeTickets=作業記録票枚数（作業人数）
+
+#Message
+ProcessingCompleted=処理が完了しました。
