PP-001 BOMの一括登録

--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
@@ -53,4 +53,5 @@ BOMItemIsCostingRelevant=原価計算関連フラグ
 BOMSubItemInstallationPoint=副明細設定ポイント
 BillOfMaterialSubItemQuantity=副明細数量
 
-
+#Message
+ProcessingCompleted=処理が完了しました。
