--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
@@ -52,3 +52,6 @@ ProdOrderIssueLocation=Location
 BOMItemIsCostingRelevant=Is Costing Relevant
 BOMSubItemInstallationPoint=Sub-item Installation Point
 BillOfMaterialSubItemQuantity=Sub-item Quantity
+
+#Message
+ProcessingCompleted=Processing Completed.
