PP-013 OF分割ルールマスタ管理

--- a/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_en.properties
@@ -28,10 +28,12 @@ logInfo={0} pieces of data, {1} were successfully imported, and {2} failed to be
 #Table Column
 Status=Status
 Message=Message
+Customer=Customer
 SplitMaterial=Material
 Plant=Plant
 ShipUnit=Ship Unit
 SplitUnit=Split Unit
+ValidEnd=Valid-End
 DeleteFlag=Delete Flag
 
 #Message
