PP-006 製造バージョン一括登録

--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_en.properties
@@ -32,9 +32,9 @@ ProductionVersion=Production Version
 ProductionVersionText=Production Version Text
 ValidityStartDate=Validity Start Date
 ValidityEndDate=Validity End Date
-BillOfOperationsType=Operations Type
-BillOfOperationsGroup=Operations Group
-BillOfOperationsVariant=Operations Variant
+ExecBillOfOperationsType=Task List Type
+ExecBillOfOperationsGroup=Task List Group
+ExecBillOfOperationsVariant=Group Counter
 BillOfMaterialVariantUsage=BOM Usage
 BillOfMaterialVariant=Alternative BOM
 ProductionLine=Production Line
