--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_en.properties
@@ -37,7 +37,7 @@ ResponsiblePlannerGroup=Planner Group
 Operation=Operation
 WorkCenter=Work Center
 OperationControlProfile=Control Key
-OperationStandardTextCode=Standard Text Key
+OperationText=Operation Text
 StandardWorkQuantity1=Standard Value1
 StandardWorkQuantityUnit1=Unit1
 StandardWorkQuantity2=Standard Value2
