--- a/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zroutingupload/webapp/i18n/i18n_ja.properties
@@ -37,7 +37,7 @@ ResponsiblePlannerGroup=計画グループ
 Operation=作業番号
 WorkCenter=作業区
 OperationControlProfile=管理キー
-OperationStandardTextCode=作業テキスト
+OperationText=作業テキスト
 StandardWorkQuantity1=パラメータ1：段取
 StandardWorkQuantityUnit1=単位1
 StandardWorkQuantity2=パラメータ2：機械/作業サイクル
