PP-001_BOMの一括登録

--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n.properties
@@ -29,7 +29,7 @@ Message=メッセージ
 Material=品目
 Plant=プラント
 BillOfMaterialVariantUsage=BOM用途
-IsMultipleBOMAlt=代替BOM
+BillOfMaterialVariant=代替BOM
 HeaderValidityStartDate=有効開始日
 BOMHeaderQuantityInBaseUnit=基本数量
 BOMHeaderText=BOMテキスト
