--- a/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zbomupload/webapp/i18n/i18n_en.properties
@@ -29,7 +29,7 @@ Message=Message
 Material=Material
 Plant=Plant
 BillOfMaterialVariantUsage=BOM Usage
-IsMultipleBOMAlt=Is Alternative BOM
+BillOfMaterialVariant=Alternative BOM
 HeaderValidityStartDate=Valid-From Date
 BOMHeaderQuantityInBaseUnit=Base Quantity
 BOMHeaderText=BOM Header Text
