--- a/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zproductionversionupload/webapp/i18n/i18n_ja.properties
@@ -32,9 +32,9 @@ ProductionVersion=製造バージョン
 ProductionVersionText=製造バージョンテキスト
 ValidityStartDate=有効開始日付
 ValidityEndDate=有効終了日
-ExecBillOfOperationsType=タスクリストタイプ
-ExecBillOfOperationsGroup=グループ
-ExecBillOfOperationsVariant=グループカウンタ
+BillOfOperationsType=タスクリストタイプ
+BillOfOperationsGroup=グループ
+BillOfOperationsVariant=グループカウンタ
 BillOfMaterialVariantUsage=BOM用途
 BillOfMaterialVariant=代替BOM
 ProductionLine=生産ライン
