--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -12,3 +12,65 @@ title=Manage Picking List
 
 #XFLD,57
 flpTitle=Manage Picking List
+
+StandardList=Standard List
+CustomList=Custom List
+
+LocationFrom=W/H From
+LocationTo=W/H To
+
+#Table
+RowNo=No.
+Plant=Plant
+Material=Material
+MaterialName=Material Name
+StorageLocationTo=Storage Loc. To
+StorageLocationToName=Storage Loc. To Name
+TotalRequiredQuantity=Total Required Quantity
+TotalShortFallQuantity=Total Short Fall Quantity
+StorageLocationToStock=Storage Loc. To Stock
+M_CARD_Quantity=M_CARD Quantity
+BaseUnit=Base Unit
+TotalTransferQuantity=Transfer Quantity
+StorageLocationFrom=Storage Loc. From
+StorageLocationFromName=Storage Loc. From Name
+StorageLocationFromStock=Storage Loc. From Stock
+GR_SlipsQuantity=GR Slips Quantity
+SizeOrDimensionText=Excessive Transfer Restrictions
+M_CARD=M_CARD
+LaboratoryOrDesignOffice=Laboratory
+ExternalProductGroup=Ext. Product Group
+MaterialGroup=Material Group
+RequisitionDate=Requisition Date
+Reservation=Reservation
+ReservationItem=Reservation Item
+PostingStatus=Posting Status
+PostingQuantity=Posting Quantity
+MRPController=MRP Controller
+ProductionSupervisor=Production Supervisor
+DeleteFlag=Delete Flag
+CreatedDate=Created Date
+CreatedByUser=Created By
+LastChangedDate=Last Changed Date
+LastChangedByUser=Last Changed By
+
+ManufacturingOrder=Mfg. Order
+Product=Mfg. Order Product
+OrderRequiredQuantity=Order Required Quantity
+ResidueStockQuantity=Residue Stock Quantity
+ShortQuantity=Short Quantity
+ConfirmedAvailableQuantity=ATP Quantity
+
+# Button
+Create=Create
+Delete=Delete
+Edit=Edit
+Save=Save
+Display=Display
+ShowDetails=Production Order Details
+CloseBtn=Close
+
+# Message
+Results=Results
+NoneSelected=Please select the records to process.
+ConfirmMessage=Would you like to {0}?
