--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
@@ -12,3 +12,65 @@ title=ピッキングリスト管理
 
 #XFLD,57
 flpTitle=ピッキングリスト管理
+
+StandardList=欠品一覧
+CustomList=入出庫一覧
+
+LocationFrom=W/H From
+LocationTo=W/H To
+
+#Table
+RowNo=No.
+Plant=プラント
+Material=SAP部品番号
+MaterialName=部品名
+StorageLocationTo=保管場所(To)
+StorageLocationToName=保管場所(To)名
+TotalRequiredQuantity=合計所要数量
+TotalShortFallQuantity=合計欠品数量
+StorageLocationToStock=保管場所(To)利用可能在庫
+M_CARD_Quantity=M-CARD数量(UWMS)
+BaseUnit=基本単位
+TotalTransferQuantity=移動数量
+StorageLocationFrom=供給保管場所(From)
+StorageLocationFromName=供給保管場所(From)名
+StorageLocationFromStock=保管場所(From)利用可能在庫
+GR_SlipsQuantity=先行出庫数量
+SizeOrDimensionText=過剰移動制限
+M_CARD=M_CARD(UWMS)
+LaboratoryOrDesignOffice=タイプ(試験室/Office）
+ExternalProductGroup=外部品目グループ
+MaterialGroup=品目グループ
+RequisitionDate=所要日付
+Reservation=入出庫予定番号
+ReservationItem=入出庫予定明細番号
+PostingStatus=転記状態
+PostingQuantity=転記数量
+MRPController=MRP管理者
+ProductionSupervisor=製造責任者
+DeleteFlag=削除フラグ
+CreatedDate=登録日付
+CreatedByUser=登録者
+LastChangedDate=変更日付
+LastChangedByUser=変更者
+
+ManufacturingOrder=製造指図
+Product=指図品目番号
+OrderRequiredQuantity=指図所要数量
+ResidueStockQuantity=残利用可能在庫(To)
+ShortQuantity=欠品数量
+ConfirmedAvailableQuantity=ATP数量
+
+# Button
+Create=登録
+Delete=削除
+Edit=変更
+Save=保存
+Display=展示
+ShowDetails=製造指図詳細
+CloseBtn=いいえ
+
+# Message
+Results=結果
+NoneSelected=処理対象のレコードを選択して下さい。
+ConfirmMessage={0}しますか？
