--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -18,6 +18,8 @@ CustomList=Custom List
 
 LocationFrom=W/H From
 LocationTo=W/H To
+StorageLocation=Storage Location
+StorageLocationName=Storage Location Name
 
 #Table
 RowNo=No.
@@ -60,6 +62,7 @@ OrderRequiredQuantity=Order Required Quantity
 ResidueStockQuantity=Residue Stock Quantity
 ShortQuantity=Short Quantity
 ConfirmedAvailableQuantity=ATP Quantity
+StockQuantity=Stock Quantity
 
 # Button
 Create=Create
@@ -74,3 +77,11 @@ CloseBtn=Close
 Results=Results
 NoneSelected=Please select the records to process.
 ConfirmMessage=Would you like to {0}?
+
+Warning=Warning
+Error=Error
+Success=Success
+Message1=行 {0} の移動数量は在庫数量を超えました。
+Message2=行 {0} の移動数量は欠品数量を超えることはできません。
+Message3=行 {0} の移動数量は欠品数量より少ないです。
+Message4=行 {0} の移動数量は欠品数量を超えました。
