--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
@@ -18,6 +18,8 @@ CustomList=入出庫一覧
 
 LocationFrom=W/H From
 LocationTo=W/H To
+StorageLocation=保管場所
+StorageLocationName=保管場所名
 
 #Table
 RowNo=No.
@@ -60,6 +62,7 @@ OrderRequiredQuantity=指図所要数量
 ResidueStockQuantity=残利用可能在庫(To)
 ShortQuantity=欠品数量
 ConfirmedAvailableQuantity=ATP数量
+StockQuantity=利用可能在庫
 
 # Button
 Create=登録
@@ -74,3 +77,11 @@ CloseBtn=いいえ
 Results=結果
 NoneSelected=処理対象のレコードを選択して下さい。
 ConfirmMessage={0}しますか？
+
+Warning=警告
+Error=エラー
+Success=成功
+Message1=行 {0} の移動数量は在庫数量を超えました。
+Message2=行 {0} の移動数量は欠品数量を超えることはできません。
+Message3=行 {0} の移動数量は欠品数量より少ないです。
+Message4=行 {0} の移動数量は欠品数量を超えました。
