PP‐016_ピッキングリスト作成

--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
@@ -81,7 +81,8 @@ ConfirmMessage={0}しますか？
 Warning=警告
 Error=エラー
 Success=成功
-Message1=行 {0} の移動数量は在庫数量を超えました。
-Message2=行 {0} の移動数量は欠品数量を超えることはできません。
-Message3=行 {0} の移動数量は欠品数量より少ないです。
-Message4=行 {0} の移動数量は欠品数量を超えました。
+Message1=行 {0} の保管場所(From)と(TO)が同じです。チェックしてください。
+Message2=行 {0} の移動数量は在庫数量を超えました。
+Message3=行 {0} の移動数量は欠品数量を超えることはできません。
+Message4=行 {0} の移動数量は欠品数量より少ないです。
+Message5=行 {0} の移動数量は欠品数量を超えました。
