--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -81,7 +81,8 @@ ConfirmMessage=Would you like to {0}?
 Warning=Warning
 Error=Error
 Success=Success
-Message1=行 {0} の移動数量は在庫数量を超えました。
-Message2=行 {0} の移動数量は欠品数量を超えることはできません。
-Message3=行 {0} の移動数量は欠品数量より少ないです。
-Message4=行 {0} の移動数量は欠品数量を超えました。
+Message1=No. {0} has the same storage location (From) and (To), please check.
+Message2=No. {0} the transfer quantity has exceeded the storage loc. (From) stock.
+Message3=No. {0} the transfer quantity cannot exceed the total short fall quantity.
+Message4=No. {0} the transfer quantity is less than the total short fall quantity.
+Message5=No. {0} the transfer quantity has exceeded the total short fall quantity.
