--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n.properties
@@ -86,3 +86,5 @@ Message2=行 {0} の移動数量は在庫数量を超えました。
 Message3=行 {0} の移動数量は欠品数量を超えることはできません。
 Message4=行 {0} の移動数量は欠品数量より少ないです。
 Message5=行 {0} の移動数量は欠品数量を超えました。
+Message6=行 {0} {1}を入力してください。
+Message7=入出庫予定処理件数は1件しか処理できません。
