--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -86,3 +86,5 @@ Message2=No. {0} the transfer quantity has exceeded the storage loc. (From) stoc
 Message3=No. {0} the transfer quantity cannot exceed the total short fall quantity.
 Message4=No. {0} the transfer quantity is less than the total short fall quantity.
 Message5=No. {0} the transfer quantity has exceeded the total short fall quantity.
+Message6=No. {0} please enter the {1}.
+Message7=Only one reservation can be processed.
