--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_en.properties
@@ -13,8 +13,8 @@ title=Manage Picking List
 #XFLD,57
 flpTitle=Manage Picking List
 
-StandardList=Standard List
-CustomList=Custom List
+StandardList=Registration
+CustomList=List processing
 
 LocationFrom=W/H From
 LocationTo=W/H To
