--- a/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zpickinglist/webapp/i18n/i18n_ja.properties
@@ -13,8 +13,8 @@ title=ピッキングリスト管理
 #XFLD,57
 flpTitle=ピッキングリスト管理
 
-StandardList=欠品一覧
-CustomList=入出庫一覧
+StandardList=登録
+CustomList=一覧処理
 
 LocationFrom=W/H From
 LocationTo=W/H To
