--- a/pp-s4apps01/zledversioninfo/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zledversioninfo/webapp/i18n/i18n_en.properties
@@ -15,16 +15,24 @@ flpTitle=LED Material Production Version Info
 upload=Upload
 
 #Texts for Main.view.xml
-templateText=テンプレートダウンロード
-uploadText=ファイルアップロード
-result=結果
-clearBtn=取込データクリア
-checkBtn=チェック
-excuteBtn=実行
-exportBtn=エクセル出力
-closeBtn=いいえ
-logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
+templateText=Download Template
+uploadText=Upload File
+result=Result
+clearBtn=Clear
+checkBtn=Check
+excuteBtn=Excute
+exportBtn=Excel Output
+closeBtn=Close
+logInfo={0} pieces of data, {1} were successfully imported, and {2} failed to be imported.
 
 #Table Column
-Status=ステータス
-Message=メッセージ
+Status=Status
+Message=Message
+Material=Production Material
+Plant=Plant
+VersionInfo=Version Info
+Component=Component
+DeleteFlag=Delete Flag
+
+#Message
+ProcessingCompleted=Processing Completed.
