pp031 製造指図一括発行 20241016

--- a/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zproductionorderrelease/webapp/i18n/i18n_ja.properties
@@ -9,7 +9,7 @@ appTitle=製造指図一括発行
 appDescription=製造指図一括発行
 
 #XFLD,36
-Release=Release
+Release=製造指図発行
 
 #Text
-confirmMessage=Would you like to {0}?
+confirmMessage={0}しますか？
