20241017 SD010 SD011売上・検収突合プラットフォーム

--- a/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/salesacceptance/webapp/i18n/i18n.properties
@@ -77,3 +77,6 @@ OutsideData=Outside Data
 
 #Message
 msg001=There are error messages,please correct and import again!
+
+#XFLD,48
+flpTitle=Sales Acceptance
