20241017 MM-003_購買発注一括変更

--- a/mm-s4apps01/purinforecordupload/webapp/i18n/i18n.properties
+++ b/mm-s4apps01/purinforecordupload/webapp/i18n/i18n.properties
@@ -66,3 +66,6 @@ ConditionValidityEndDate=Available to
 Xflag=SCALEON
 ConditionScaleQuantity=Condition Scale Quantity
 ConditionScaleAmount=Condition Scale Amount
+
+#XFLD,63
+flpTitle=Pur InfoRecord Upload
