PP-025 製造指図と受注の割当管理

--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
@@ -3,10 +3,41 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Allocation Management for MfgOrder and SO
+appTitle=Assign Management for MfgOrder and SO
 
 #YDES: Application description
-appDescription=Allocation Management for MfgOrder and SO
+appDescription=Assign Management for MfgOrder and SO
 
 #XFLD,61.5
-flpTitle=Allocation Management for MfgOrder and SO
+flpTitle=Assign Management for MfgOrder and SO
+
+# Button
+SaveBtn=Save
+CloseBtn=Close
+
+AssignSalesOrder=Assign Sales Order
+ChangeAssignQty=Change Assign Quantity
+ChangeAssignMaterial=Change Assign Material
+ChangeAssignSalesOrder=Change Assign Sales Order
+DeleteSOItem=Delete
+
+RequestedDeliveryDate=Delivery Date
+SalesOrder=Sales Order
+SalesOrderItem=SO Item
+RequestedQuantityInBaseUnit=Item Quantity
+PurchaseOrderByCustomer=Customer PO.
+AssignQty=Assign Quantity
+UnAssignQty=Unassign quantity
+TotalAssignQty=Total Assign Quantity
+
+#Message
+Results=Results
+Warning=Warning
+Error=Error
+Success=Success
+ProcessingCompleted=Processing Completed.
+
+Message1=The available assign quantity is 0, so [Assign Sales Order] is not possible.
+Message2=Assign quantity of sales order {0} {1} is greater unassign quantity.
+Message3=Sum assign quantity {0} is greater than available assign quantity {1}.
+Message4=Assign quantity of sales order {0} {1} is greater item quantity.
