--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
@@ -8,5 +8,33 @@ appTitle=製造指図と受注の割当管理
 #YDES: Application description
 appDescription=製造指図と受注の割当管理
 
-#XFLD,61.5
-flpTitle=製造指図と受注の割当管理
+# Button
+SaveBtn=保存
+CloseBtn=いいえ
+
+AssignSalesOrder=受注割当
+ChangeAssignQty=割当数変更
+ChangeAssignMaterial=割当品目変更
+ChangeAssignSalesOrder=割当受注変更
+DeleteSOItem=削除
+
+RequestedDeliveryDate=納入日付
+SalesOrder=受注番号
+SalesOrderItem=受注明細
+RequestedQuantityInBaseUnit=受注明細数量
+PurchaseOrderByCustomer=顧客発注番号
+AssignQty=割当数量
+UnAssignQty=未割当数量
+TotalAssignQty=割当済数量
+
+#Message
+Results=結果
+Warning=警告
+Error=エラー
+Success=成功
+ProcessingCompleted=処理が完了しました。
+
+Message1=割当可能数が0なので、受注割当不可。
+Message2=受注 {0} {1} の割当数が未割当数より多くなる。
+Message3=割当合計数 {0} が割当可能数 {1} より多くなる。
+Message4=受注 {0} {1} の割当数が明細数量より多くなる。
