PP-025 製造指図と受注の割当管理

--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_en.properties
@@ -30,11 +30,16 @@ AssignQty=Assign Quantity
 UnAssignQty=Unassign quantity
 TotalAssignQty=Total Assign Quantity
 
+AssignMaterial=Assign Material
+Material=Material
+MaterialDescription=Material Description
+
 #Message
 Results=Results
 Warning=Warning
 Error=Error
 Success=Success
+confirmMessage=Would you like to {0}?
 ProcessingCompleted=Processing Completed.
 
 Message1=The available assign quantity is 0, so [Assign Sales Order] is not possible.
