--- a/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zmfgorderassignso/webapp/i18n/i18n_ja.properties
@@ -27,11 +27,16 @@ AssignQty=割当数量
 UnAssignQty=未割当数量
 TotalAssignQty=割当済数量
 
+AssignMaterial=割当品目
+Material=品目
+MaterialDescription=品目名
+
 #Message
 Results=結果
 Warning=警告
 Error=エラー
 Success=成功
+confirmMessage={0}しますか？
 ProcessingCompleted=処理が完了しました。
 
 Message1=割当可能数が0なので、受注割当不可。
