--- a/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/deliveryreceipt/webapp/i18n/i18n.properties
@@ -10,6 +10,12 @@ appDescription=納受領出力
 
 #XBUT,25
 print=印刷
+reprint=訂正印刷
+delete=納品書No.クリア
 
 #XMSG
 msgInconsistencies=得意先または出荷ポイントが一緒ではなく、まとめて印刷することはできません。
+msgDeleteSuccessed=納品書No.クリア成功
+
+#XFLD,120: Label for a column title
+salesOrganization=Sales Organization
