SD-031与信管理表

--- a/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
@@ -12,3 +12,12 @@ title=与信管理表
 
 #XFLD,25
 flpTitle=与信管理表
+
+Results=検索結果
+SalesOrganization=販売組織
+Customer=得意先
+zyear=年度
+CustomerName=得意先名
+LimitAmount=与信限度額
+Termstext=回収条件
+zmonth1=1月
