SD-031与信管理表

--- a/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
@@ -21,3 +21,14 @@ CustomerName=得意先名
 LimitAmount=与信限度額
 Termstext=回収条件
 zmonth1=1月
+zmonth2=2月
+zmonth3=3月
+zmonth4=4月
+zmonth5=5月
+zmonth6=6月
+zmonth7=7月
+zmonth8=8月
+zmonth9=9月
+zmonth10=10月
+zmonth11=11月
+zmonth12=12月
