SD-031与信管理表

--- a/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
+++ b/sd-s4apps01/creditmantablen/webapp/i18n/i18n.properties
@@ -19,7 +19,9 @@ Customer=得意先
 zyear=年度
 CustomerName=得意先名
 LimitAmount=与信限度額
-Termstext=回収条件
+Termstext1=回収条件1
+Termstext2=回収条件2
+text=項目
 zmonth1=1月
 zmonth2=2月
 zmonth3=3月
