--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_en.properties
@@ -12,3 +12,41 @@ title=Purchase Price Variance Report
 
 #XFLD,90
 flpTitle=Purchase Price Variance Report
+
+#Table
+Results=Results
+PurchaseOrder=Purchase Order
+PurchaseOrderItem=Purchase Order Item
+PurchasingGroup=Purchasing Group
+PurchasingGroupName=Purchasing Grp. Name
+Supplier=Supplier
+OrganizationBPName1=Supplier Name
+DocumentCurrency=Current PO Currency
+Material=Material
+PurchaseOrderItemText=Material Text
+SupplierMaterialNumber=Supplier Mat. No.
+OrderQuantity=Order Quantity
+PurchaseOrderQuantityUnit=Unit
+ScheduleLineDeliveryDate=Delivery Date
+NetPriceQuantity=Price Unit
+Plant=Plant
+StorageLocation=Storage Location
+StorageLocationName=Storage Loc. Name
+PricingDateControl=PO Pricing Date Control
+PricingDateControlText=PO Pricing Date Control Text
+CurrentPrice=Current Price
+PurgDocPriceDate=PO Price Date
+PricingDateControl2=Master Pricing Date Control
+PricingDateControl2Text=Master Pricing Date Control Text
+Currency=New PO Currency
+ConditionValidityStartDate=Validity Start Date
+ConditionValidityEndDate=Validity End Date
+ConditionQuantity=Info Record Price Unit
+NewPrice=New PO Price
+DeliveryDate=Reply Deadline
+PostingDate=Posting Date
+YY1_CUSTOMERMATERIAL_PRD=Customer Mat. No.
+Difference=Price Difference
+PurchaseOrderStr=PO Item
+PriceDate=Price Date
+NoCompletelyDelivered=Exclude Delivered PO
