--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
@@ -12,3 +12,41 @@ title=購買単価差異レポート
 
 #XFLD,90
 flpTitle=購買単価差異レポート
+
+#Table
+Results=結果
+PurchaseOrder=購買伝票番号
+PurchaseOrderItem=購買伝票の明細番号
+PurchasingGroup=購買Gコード
+PurchasingGroupName=購買G名
+Supplier=仕入先コード
+OrganizationBPName1=仕入先名称
+DocumentCurrency=現PO通貨
+Material=品目コード
+PurchaseOrderItemText=品目テキスト
+SupplierMaterialNumber=仕入先品目コード
+OrderQuantity=PO数量
+PurchaseOrderQuantityUnit=発注単位
+ScheduleLineDeliveryDate=PO納期
+NetPriceQuantity=価格単位
+Plant=プラント
+StorageLocation=保管場所
+StorageLocationName=保管場所テキスト
+PricingDateControl=PO期日制御フラグ
+PricingDateControlText=PO期日制御テキスト
+CurrentPrice=現PO単価
+PurgDocPriceDate=価格決定日付(PO)
+PricingDateControl2=マスタ期日制御フラグ
+PricingDateControl2Text=マスタ期日制御テキスト
+Currency=新PO通貨
+ConditionValidityStartDate=有効開始日
+ConditionValidityEndDate=有効終了日
+ConditionQuantity=購買情報マスタ価格条件単位
+NewPrice=新PO単価
+DeliveryDate=回答納期
+PostingDate=受入日
+YY1_CUSTOMERMATERIAL_PRD=顧客品番
+Difference=単価差異
+PurchaseOrderStr=購買発注番号明細
+PriceDate=価格決定日付(マスタ)
+NoCompletelyDelivered=納入完了PO排除
