--- a/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
+++ b/mm-s4apps01/zpurchasepricevariance/webapp/i18n/i18n_ja.properties
@@ -49,4 +49,4 @@ YY1_CUSTOMERMATERIAL_PRD=顧客品番
 Difference=単価差異
 PurchaseOrderStr=購買発注番号明細
 PriceDate=価格決定日付(マスタ)
-NoCompletelyDelivered=納入完了PO排除
+ExcludeDeliveredPO=納入完了PO排除
