PP-011 OFとSO比較照会

--- a/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
@@ -12,3 +12,13 @@ title=OFとSO比較照会
 
 #XFLD,27
 flpTitle=OFとSO比較照会
+
+Duration=所要期間
+LatestOF=最新OFデータのみ
+Contents=表示内容
+Plant=プラント
+Customer=受注先
+Material=品目
+MaterialName=品目テキスト
+MATERIALBYCUSTOMER=得意先品目
+CREATED_AT=登録日付
