PP-011 OFとSO比較照会

--- a/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/ofsocomparison/webapp/i18n/i18n.properties
@@ -22,3 +22,12 @@ Material=品目
 MaterialName=品目テキスト
 MATERIALBYCUSTOMER=得意先品目
 CREATED_AT=登録日付
+
+LatestOF=最新OFデータのみ
+LatestOF1=はい
+LatestOF2=いいえ
+
+Contents=表示内容
+Contents1=OF＆SO
+Contents2=OFのみ
+Contents3=SOのみ
