--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -77,6 +77,7 @@ ProductDescription=Product Description
 ProductType=Product Type
 StandardPrice=Standard Price
 PriceUnitQty=Price Unit
+MailAddress=Mail Address
 
 #Text
 selectOperation=Please select a function operation.
