--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_ja.properties
@@ -77,6 +77,7 @@ ProductDescription=製品テキスト
 ProductType=製品タイプ
 StandardPrice=標準原価
 PriceUnitQty=価格単位
+MailAddress=メールアドレス
 
 #Text
 selectOperation=機能操作を選択してください。
