SD026 受注管理レポート 20241026

--- a/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
+++ b/sd-s4apps01/zsalesdocumentlist/webapp/i18n/i18n_en.properties
@@ -59,23 +59,31 @@ ConfirmedDeliveryDate=確認済納入日付
 TransactionCurrency=伝票通貨										
 PriceDetnExchangeRate=換算レート										
 ExchangeRateDate=換算レート日付																		
-ConditionRateValuePPR0=販売価格(PPR0)	 										
-ConditionAmountPPR0=単価(PPR0)(数量単位＝1)									
-ConditionRateValueTTX1=税率(TTX1)										
-ConditionAmountTTX1=仮受消費税(TTX1)										
+ConditionRateValuePPR0=単価(PPR0)(数量単位＝1)	  
+ConditionCurrencyPPR0=条件通貨(PPR0)										
+ConditionAmountPPR0=販売価格(PPR0)									
+ConditionRateValueTTX1=税率(TTX1)	 											
+ConditionAmountTTX1=仮受消費税(TTX1)								
 ConditionRateValueZPFC=単価(ZPFC)(数量単位＝1)										
-ConditionAmountZPFC=製品輸送費(ZPFC)										
-ConditionRateValueZPST=単価(ZPST)(数量単位＝1)										
+ConditionAmountZPFC=製品輸送費(ZPFC)	
+ConditionCurrencyZPFC=条件通貨(ZPFC)											
+ConditionRateValueZPST=単価(ZPST)(数量単位＝1)	
+ConditionCurrencyZPST=条件通貨(ZPST)										
 ConditionAmountZPST=特別輸送費-単価回収分(ZPST)										
-ConditionRateValueZPIN=単価(ZPIN)(数量単位＝1)										
+ConditionRateValueZPIN=単価(ZPIN)(数量単位＝1)	
+ConditionCurrencyZPIN=条件通貨(ZPIN)										
 ConditionAmountZPIN=イニシャル費‐単価回収分(ZPIN)										
-ConditionRateValueZPSB=単価(ZPSB)(数量単位＝1)										
+ConditionRateValueZPSB=単価(ZPSB)(数量単位＝1)	
+ConditionCurrencyZPSB=条件通貨(ZPSB)											
 ConditionAmountZPSB=スポットパイ‐単価回収分(ZPSB)										
-ConditionRateValueZPSS=単価(ZPSS)(数量単位＝1)										
+ConditionRateValueZPSS=単価(ZPSS)(数量単位＝1)	
+ConditionCurrencyZPSS=条件通貨(ZPSS)										
 ConditionAmountZPSS=在庫廃棄ロス‐単価回収分(ZPSS)										
-ConditionRateValueZPCM=単価(ZPCM)(数量単位＝1)										
+ConditionRateValueZPCM=単価(ZPCM)(数量単位＝1)	
+ConditionCurrencyZPCM=条件通貨(ZPCM)										
 ConditionAmountZPCM=貢献利益(ZPCM)										
-ConditionRateValueZPGP=単価(ZPGP)(数量単位＝1)										
+ConditionRateValueZPGP=単価(ZPGP)(数量単位＝1)	
+ConditionCurrencyZPGP=条件通貨(ZPGP)										
 ConditionAmountZPGP=売上総利益(ZPGP)										
 YY1_ItemRemarks_1_SDI=備考(明細)									
 DeliveredQtyInOrderQtyUnit=出荷済数量									
@@ -105,7 +113,7 @@ Indicator4=未請求
 Indicator5=請求済
 Indicator6=拒否項目の表示
 
-Results=結果
+Results=受注({0}件) 受注明細({1}件)
 
 #XFLD,24
 flpTitle=受注管理レポート
