--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -55,7 +55,8 @@ BaseUnit=単位
 StorageLocation=消費保管場所
 StorageLocationName=保管場所名
 Location=ロケーション
-Remark=補足情報/発生理由
+Reason=発生理由
+Remark=補足情報
 StandardPrice=単価
 TotalAmount=合計金額
 Currency=通貨
