--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -55,6 +55,7 @@ BaseUnit=Unit
 StorageLocation=Storage Location
 StorageLocationName=Storage Loc. Name
 Location=Location
+Reason=Reason
 Remark=Remark
 StandardPrice=Standard Price
 TotalAmount=Total Amount
