--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n_en.properties
@@ -68,8 +68,12 @@ CreatedByUserName=Created By
 ControllingArea=Controlling Area
 ValidityEndDate=Valid To
 ValidityStartDate=Valid From
+CompanyCode=Company Code
 ProductionPlant=Production Plant
 ManufacturingOrderType=Order Type
+GoodsMovementType=Movement Type
+RequiredQuantity=Requirement Quantity
+WithdrawnQuantity=Withdrawn Quantity
 MfgOrderPlannedStartDate=Planned Start Date
 MfgOrderPlannedEndDate=Planned End Date
 MRPController=MRP Controller
