--- a/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zmaterialrequisition/webapp/i18n/i18n.properties
@@ -28,7 +28,7 @@ SearchBtn=検索
 SaveBtn=保存
 AddBtn=明細追加
 DelBtn=明細削除
-CloseBtn=いいえ
+CloseBtn=中止
 Results=結果
 
 #Create Header
@@ -68,8 +68,12 @@ CreatedByUserName=登録者
 ControllingArea=管理領域
 ValidityEndDate=有効終了
 ValidityStartDate=有効開始
+CompanyCode=会社コード
 ProductionPlant=生産プラント
 ManufacturingOrderType=指図タイプ
+GoodsMovementType=移動タイプ
+RequiredQuantity=所要量
+WithdrawnQuantity=引落済在庫
 MfgOrderPlannedStartDate=計画開始日付
 MfgOrderPlannedEndDate=計画終了日
 MRPController=MRP 管理者
