--- a/fico-s4apps01/zdaystocktrans/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zdaystocktrans/webapp/i18n/i18n.properties
@@ -3,10 +3,13 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=日別在庫推移
+appTitle=日別在庫金額照会
 
 #YDES: Application description
-appDescription=日別在庫推移
+appDescription=日別在庫金額照会
 
 #XFLD,30
-flpTitle=日別在庫推移
+flpTitle=日別在庫金額照会
+
+#XFLD,24
+flpTitle=日別在庫金額照会
