BI004 逆ザヤ防止分析

--- a/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/costanalysis/webapp/i18n/i18n.properties
@@ -12,3 +12,47 @@ title=逆ザヤ防止分析
 
 #XFLD,35
 flpTitle=逆ザヤ防止分析
+
+COSTANALYSISCOM=部品費
+COSTANALYSISPROCESS=加工費
+Companycode=会社コード
+zYear=年
+zMonth=月
+Material=部品
+Product=製品
+Customer=得意先
+
+YearMonth=年月									
+Companycode=会社コード									
+CompanycodeText=会社コードテキスト									
+Plant=プラント									
+PlantText=プラントテキスト									
+Product=製品									
+ProductDescription=製品テキスト									
+Material=部品									
+MaterialDescription=部品テキスト									
+Quantity=所要数量									
+Customer=得意先	
+CustomerName=得意先テキスト									
+EstimatedPrice=見積単価									
+FinalPrice=最終受入単価									
+FinalPostingDate=最終受入日付									
+FinalSupplier=最終受入仕入先									
+FixedSupplier=固定仕入先									
+StandardPrice=標準原価									
+MovingAveragePrice=実際原価							
+Currency=通貨									
+BillingQuantity=製品出荷数量									
+BillingQuantityUnit=数量単位	
+
+EstimatedPrice_SMT=見積加工費（SMT）									
+EstimatedPrice_AI=見積加工費（AI）									
+EstimatedPrice_FAT=見積加工費（FAT）									
+ActualPrice_SMT=実際加工費（SMT）									
+ActualPrice_AI=実際加工費（AI）									
+ActualPrice_FAT=実際加工費（FAT）									
+Currency=通貨									
+BillingQuantity=製品出荷数量									
+BillingQuantityUnit=数量単位									
+
+
