BI003 Report 001 Change Datasource and add OData update, create function

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -22,6 +22,7 @@ title5=在庫廃棄ロス
 edit=Edit
 save=Save
 create=Create
+cancel=Cancel
 
 recoverType=回収タイプ
 recoverManagementNumber=回収管理番号
@@ -32,7 +33,16 @@ customer=得意先
 machine=コメント
 createdDate=登録日付
 createdUser=登録者
+currency=通貨
 recoveryNecessaryAmount=回収要金額
 recoveryAlready=回収済金額
 recoverProgress=回収進捗
 recoverStatus=回収ステータス
+
+companyCodeEmpty=Company Code is Empty
+yearEmpty=Year is Empty
+typeEmpty=Recovery Type is Empty
+customerEmpty=Customer is Empty
+dataSavedOK=Data Saved Successfully.
+dataSavedFailed=Data Saved Failed.
+noDataChanged=No Data Changed.
