Add BI003 XML View

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -46,3 +46,68 @@ customerEmpty=Customer is Empty
 dataSavedOK=Data Saved Successfully.
 dataSavedFailed=Data Saved Failed.
 noDataChanged=No Data Changed.
+
+#selection
+FiscalYear=年
+FiscalMonth=月
+
+
+# Report 002
+FiscalYearPeriod=会計年月
+CompanyCode=会社コード
+RecoveryManagementNumber=回収管理番号 
+PurchaseOrder=発注伝票
+PurchaseOrderItem=発注伝票明細
+SpotbuyMaterial=スポットバイ品目 
+ProductOldID=通常品目
+SpotbuyMaterialPrice=スポットバイ品目単価 
+OldMaterialPrice=通常品目最新発注単価
+OrderQuantity=スポットバイ品目入庫数量
+BaseUnit=単位
+NetPriceDiff=単価差額
+PriceDiffTotal=差額合計
+CompanyCurrency=通貨
+BillingDocument=請求書
+BillingDocumentItem=請求書明細
+BillingDocumentDate=請求日付
+BillingProduct=請求書品目
+ProfitCenter=利益センタ
+ConditionType=条件タイプ
+ConditionAmount=条件タイプ単価
+BillingPrice=請求書単価
+BillingCurrency=通貨
+BillingQuantity=請求書数量
+BillingQuantityUnit=請求書数量単位
+RecoveryAmount=回収済金額
+SalesDocument=受注伝票
+SalesDocumentItem=受注伝票明細
+Customer=受注伝票得意先 
+
+# Report 003
+InitialMaterial=イニシャル品目
+MaterialType=品目タイプ
+AccountingDocument=会計伝票
+AccountingDocumentItem=会計伝票明細
+GLAccount=勘定科目
+GLAccountText=勘定科目テキスト
+FixedAsset=固定資産番号
+FixedAssetText=固定資産テキスト
+POQuantity=発注伝票数量
+NetAmount=発注伝票単価
+RecoveryNecessaryAmount=回収必要金額
+PercentageofAP=前払金割合			
+AccountingPostingAmount=会計処理金額			
+
+# Report 004
+SpecialTransportExpenseMaterial=特別輸送費品目
+
+# Report 005
+MaterialDocument=品目入出庫伝票
+MaterialDocumentYear=品目入出庫伝票年
+MaterialDocumentItem=品目入出庫伝票明細
+SSMaterial=在庫廃棄ロス品目
+SSMaterialText=在庫廃棄ロス品目テキスト
+GLAccount=勘定科目
+GLAccountText=勘定科目テキスト
+SSQuantity=品目入出庫伝票数量
+SSAmount=品目伝票明細金額
