Change BI003 i18n Translation

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -3,15 +3,15 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Recovery Management
+appTitle=回収管理番号自動採番
 
 #YDES: Application description
-appDescription=Recovery Management
+appDescription=回収管理番号自動採番
 #XTIT: Main view title
-title=Recovery Management
+title=回収管理番号自動採番
 
 #XFLD,57
-flpTitle=Recovery Management
+flpTitle=回収管理番号自動採番
 
 title1=回収管理番号自動採番
 title2=スポットバイ
@@ -19,10 +19,10 @@ title3=イニシャル
 title4=特別輸送費
 title5=在庫廃棄ロス
 
-edit=Edit
-save=Save
-create=Create
-cancel=Cancel
+edit=編集
+save=保存
+create=新規登録
+cancel=中止
 
 recoverType=回収タイプ
 recoverManagementNumber=回収管理番号
@@ -39,13 +39,13 @@ recoveryAlready=回収済金額
 recoverProgress=回収進捗
 recoverStatus=回収ステータス
 
-companyCodeEmpty=Company Code is Empty
-yearEmpty=Year is Empty
-typeEmpty=Recovery Type is Empty
-customerEmpty=Customer is Empty
-dataSavedOK=Data Saved Successfully.
-dataSavedFailed=Data Saved Failed.
-noDataChanged=No Data Changed.
+companyCodeEmpty=会社コードは空です
+yearEmpty=年は空
+typeEmpty=回収タイプが空
+customerEmpty=顧客は空
+dataSavedOK=データの保存に成功.
+dataSavedFailed=データ保存失敗.
+noDataChanged=データ変更なし.
 
 #selection
 FiscalYear=年
