FICO-020連結勘定一括登録

--- a/fico-s4apps01/zbdglaccountlist/webapp/i18n/i18n.properties
+++ b/fico-s4apps01/zbdglaccountlist/webapp/i18n/i18n.properties
@@ -3,7 +3,7 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Binding GLAccount List
+appTitle=連結勘定残高試算表
 
 #YDES: Application description
-appDescription=Binding GLAccount List
+appDescription=連結勘定残高試算表
