20241105 PP-024 生産計画立案プラットフォーム

--- a/pp-s4apps01/productionplan/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/productionplan/webapp/i18n/i18n.properties
@@ -25,6 +25,7 @@ web4ButtonText=Prod Ord
 web5ButtonText=BOM
 web6ButtonText=Routing
 
+tableHeaderTitle=Result
 Idnrk=Idnrk
 Stufe=Stufe
 Verid=Version
