--- a/pp-s4apps01/productionplan/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/productionplan/webapp/i18n/i18n_ja.properties
@@ -25,6 +25,7 @@ web4ButtonText=製造指図/計画手配監視
 web5ButtonText=サマリBOM
 web6ButtonText=作業手順照会
 
+tableHeaderTitle=Result
 Idnrk=Model/Assembly
 Stufe=レベル
 Verid=製造バージョン
