--- a/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zofsplitrule/webapp/i18n/i18n_ja.properties
@@ -22,7 +22,7 @@ clearBtn=取込データクリア
 checkBtn=チェック
 excuteBtn=実行
 exportBtn=エクセル出力
-closeBtn=いいえ
+closeBtn=閉じる
 logInfo=ヘッダ {0} 件の中に、{1} 件の取込に成功、{2} 件の取込に失敗しました
 
 #Table Column
