BI003 回収進捗管理分析

--- a/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
+++ b/bi-s4apps01/recoverymanagement/webapp/i18n/i18n.properties
@@ -3,17 +3,17 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=回収管理番号自動採番
+appTitle=回収進捗管理分析
 
 #YDES: Application description
-appDescription=回収管理番号自動採番
+appDescription=回収進捗管理分析
 #XTIT: Main view title
-title=回収管理番号自動採番
+title=回収進捗管理分析
 
 #XFLD,57
-flpTitle=回収管理番号自動採番
+flpTitle=回収進捗管理分析
 
-title1=回収管理番号自動採番
+title1=回収進捗管理分析
 title2=スポットバイ
 title3=イニシャル
 title4=特別輸送費
