PP-003 部品使用先一覧レポート 20241106

--- a/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n_ja.properties
+++ b/pp-s4apps01/zcomponentusagelist/webapp/i18n/i18n_ja.properties
@@ -17,8 +17,9 @@ flpTitle=部品使用先一覧レポート
 Plant=プラント
 BillOfMaterialComponent=品目
 ComponentDescription=品目テキスト
+SupplierMaterialNumber=仕入先品目
 ProductManufacturerNumber=製造者製品コード
-Matererial=上位品目
+Material=上位品目
 Product=最終製品
 ProductDescription=最終製品テキスト
 MaterialByCustomer=得意先代表品目
@@ -31,6 +32,6 @@ BillOfMaterialVariant=代替BOM
 AlternativeItemStrategy=方針
 AlternativeItemPriority=優先順位
 NoDisplayNonProduct=削除フラグ製品対象外
-NoDisplayColMfrpn=製造者製品コード表示
+DisplayPurchasingInfo=購買情報表示
 
 Results=結果
