PP-002 BOM一覧レポート 20241106

--- a/pp-s4apps01/zbom/webapp/i18n/i18n.properties
+++ b/pp-s4apps01/zbom/webapp/i18n/i18n.properties
@@ -3,10 +3,10 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=BOM List
+appTitle=BOMのレポート
 
 #YDES: Application description
-appDescription=BOM List
+appDescription=BOMのレポート
 
 #XFLD,24
-flpTitle=BOM List
+flpTitle=BOMのレポート
